# layer-cake

./: .editorconfig  .gitignore  Cargo.toml  deny.toml  readme.md
docs/: gui-development-environment.md
gui/: Cargo.toml  meson.build  meson_options.txt  run.sh  setup.sh
gui/build-aux/: dist-vendor.sh  io.github.superwhiskers.layer_cake.dev.yaml
gui/data/: io.github.superwhiskers.layer_cake.desktop.in.in  io.github.superwhiskers.layer_cake.gschema.xml.in  io.github.superwhiskers.layer_cake.metainfo.xml.in.in  meson.build
gui/data/icons/: meson.build
gui/data/resources/: meson.build  resources.gresource.xml.in
gui/i18n/en-US/: layer_cake_gui.ftl
gui/po/: POTFILES.in
gui/src/: appearance.rs  application.rs  config.rs.in  i18n.rs  logging.rs  main.rs  meson.build  resources.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs  resources.rs  store.rs
lib/modrinth/: Cargo.toml
lib/mojang/: Cargo.toml
