[package]
name = "layer-cake-gui"
description = "the graphical frontend for the modern, opinionated multi-instance minecraft launcher"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/layer-cake"
readme = "../readme.md"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
rust-embed = "6"
i18n-embed-fl = "0.6"
once_cell = "1"
tracing-log = "0.1"

#TODO(superwhiskers): use mimalloc here

[dependencies.relm4]
version = "0.6.0-alpha.1"
features = ["macros", "libadwaita", "gnome_43"]

[dependencies.i18n-embed]
version = "0.13"
features = ["fluent-system", "desktop-requester"]

[dependencies.tracing]
version = "0.1"
features = ["release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["parking_lot", "env-filter"]
