[package]
name = "layer-cake-core"
description = "the core backend for the modern, opinionated multi-instance minecraft launcher"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/layer-cake"
readme = "../readme.md"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
kangarootwelve_xkcp = "0.1"
rmp-serde = "1"
typetag = "0.2"
base64 = "0.21"
serde_with = "2"

[dependencies.futures]
version = "0.3"
default-features = false
feaures = ["std"]

[dependencies.rocksdb]
version = "0.20"
default-features = false
features = ["zstd"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
