[package]
name = "layer-cake-modrinth"
description = "modrinth api adapter for the opinionated minecraft launcher you didn't want"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/layer-cake"
readme = "../readme.md"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
http = "0.2"
hyper-rustls = "0.23"
tracing = "0.1"
simd-json = "0.7"
simd-json-derive = "0.7"

[dependencies.hyper]
version = "0.14"
features = ["client", "http2", "http1"]
