[package]
name = "layer-cake-mojang"
description = "mojang api adapter for the modern, opinionated multi-instance minecraft launcher"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/layer-cake"
readme = "../readme.md"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
http = "0.2"
hyper-rustls = "0.23"
tracing = "0.1"
simd-json = "0.7"

[dependencies.hyper]
version = "0.14"
features = ["client", "http2", "http1"]

[dependencies.simd-json-derive]
version = "0.7"
default-features = false
